feat: حماية حسابات المدير
منع حذف أو خفض آخر مدير وحماية حساب admin والجلسة الحالية، مع قفل متزامن وسياسة كلمة مرور موحدة وتأكيدها واختبارات MySQL.